feat: comment mocked data

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <div class="new-task-container box">
       <label for="new-task">Adicionar nova tarefa</label>
       <input type="text" id="new-task">
-      <button id="addTask" onclick="addTask()">Adicionar</button>
+      <button id="addTask">Adicionar</button>
     </div>
 
     <div class="todo-list box">
       <h2>Tarefas a fazer</h2>
       <ul>
-        <li>
+        <!-- <li>
           <input type="checkbox"><label>Nome da tarefa</lable>
         </li>
         <li>
@@ -25,14 +25,14 @@
         </li>
         <li>
           <input type="checkbox"><label>Nome da tarefa</lable>
-        </li>
+        </li> -->
       </ul>
     </div>
 
     <div class="complete-list box">
       <h2>Tarefas feitas</h2>
       <ul>
-        <li>Nome da tarefa <button class="delete">Apagar</button></li>
+        <!-- <li>Nome da tarefa <button class="delete">Apagar</button></li> -->
       </ul>
     </div>
   </section>
